--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,7 +1,7 @@
 body{
     color: blue;
     text-align: center;
-    font-family: "Arial";
+    font-family: "Courier";
     margin: 0;
     padding: 0;
 }
