--- a/css/estilos.css
+++ b/css/estilos.css
@@ -2,6 +2,7 @@ body{
     color: blue;
     text-align: center;
     font-family: "Courier";
+    background-color: papayawhip;
     margin: 0;
     padding: 0;
 }
