--- a/css/estilos.css
+++ b/css/estilos.css
@@ -20,3 +20,12 @@ body{
 #container h1{
     font-size:20;
 }
+
+#cabecera{
+    display: flexbox;
+    flex-direction: column;
+}
+.imgsimio{
+    width: 20px;
+    height: 20px;
+}
