--- a/css/estilos.css
+++ b/css/estilos.css
@@ -2,7 +2,7 @@ body{
     color: blue;
     text-align: center;
     font-family: "Courier";
-    background-color: gray;
+    background-color: papyawhip;
     margin: 0;
     padding: 0;
 }
